.metadata/.plugins/org.eclipse.cdt.ui/Blink and toggle LEDs.build.log
22:35:52 **** Incremental Build of configuration Debug for project Blink and toggle LEDs ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:150:13: error: invalid storage class for function 'MX_GPIO_Init'
  150 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:192:1: error: expected declaration or statement at end of input
  192 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:49:13: warning: 'MX_GPIO_Init' used but never defined
   49 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:183:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  183 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:150:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  150 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:111:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  111 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

22:35:54 Build Failed. 3 errors, 4 warnings. (took 2s.668ms)

